--- a/fullstack-c1/module3-solution/part4.html
+++ b/fullstack-c1/module3-solution/part4.html
@@ -42,7 +42,8 @@
 
 			for (var i = 0; i < numberOfFaces; i++) {
 				theImg = document.createElement('img');
-				theImg.src = "smile.png";
+				//theImg.src = "smile.png";
+				theImg.src = "http://home.cse.ust.hk/~rossiter/mooc/matching_game/smile.png";
 				theImg.style.top = getRandomArbitrary(0,400) + "px";
 				theImg.style.left = getRandomArbitrary(0, 400) + "px";
 				theLeftSide.appendChild(theImg);
