--- a/fullstack-c1/module3-solution/index.html
+++ b/fullstack-c1/module3-solution/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Module 3 Solution Part 1</title>
+	<title>Module 3 Solution Part 4</title>
+
 	<style>
 
 	img{
@@ -20,12 +21,60 @@
 	}
 
 	</style>
+
 </head>
-<body>
+<body onload="generateFaces()">
+
+
 	<h1>Matching Game</h1>
 	<p>Click on the extra smiling face on the left.</p>
 	<div id="leftSide"></div>
 	<div id="rightSide"></div>
+
+	<script>
+
+		var numberOfFaces = 5;
+		var theLeftSide = document.getElementById('leftSide');
+		var theRightSide = document.getElementById('rightSide');
+		var theBody = document.getElementsByTagName('body')[0];
+
+		function generateFaces() {
+
+			for (var i = 0; i < numberOfFaces; i++) {
+				theImg = document.createElement('img');
+				//theImg.src = "smile.png";
+				theImg.src = "http://home.cse.ust.hk/~rossiter/mooc/matching_game/smile.png";
+				theImg.style.top = getRandomArbitrary(0,400) + "px";
+				theImg.style.left = getRandomArbitrary(0, 400) + "px";
+				theLeftSide.appendChild(theImg);
+			}
+
+			leftSideImages = theLeftSide.cloneNode(true);
+			leftSideImages.removeChild(leftSideImages.lastChild);
+			theRightSide.appendChild(leftSideImages);
+
+			theLeftSide.lastChild.onclick = 
+				function nextLevel(event) {
+					event.stopPropagation();
+					numberOfFaces += 5;
+					generateFaces();
+				};
+
+			theBody.onclick = 
+				function gameOver() {
+					alert("Game Over!");
+					theBody.onclick = null;
+					theLeftSide.lastChild.onclick = null;
+				};
+
+
+		}
+
+		function getRandomArbitrary(min, max) {
+  			return Math.random() * (max - min) + min;
+		}
+
+	</script>
 
 </body>
 </html>
