--- a/fullstack-c2/module2/conFusion/index.html
+++ b/fullstack-c2/module2/conFusion/index.html
@@ -47,7 +47,7 @@
                     <li><a href="aboutus.html"><span class="glyphicon glyphicon-info-sign"></span> About</a></li>
                     <li class="dropdown"> <!-- Menu dropdown for categories -->
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown"
-                         role="button" aria-haspopup="true" aria-expanded="false">
+                         role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-list-alt"></span> 
                          Menu <span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="#">Appetizers</a></li>
@@ -60,7 +60,7 @@
                             <li><a href="#">Weekend Brunch</a></li>
                         </ul>
                      </li> <!-- End of menu dropdown for categories -->
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="contactus.html"> <i class="fa-envelope-o"></i> Contact</a></li>
                     </ul>
                 </div> <!-- navbar end -->
             </div>
