--- a/fullstack-c2/module2/conFusion/index.html
+++ b/fullstack-c2/module2/conFusion/index.html
@@ -60,7 +60,7 @@
                             <li><a href="#">Weekend Brunch</a></li>
                         </ul>
                      </li> <!-- End of menu dropdown for categories -->
-                        <li><a href="contactus.html"> <i class="fa-envelope-o"></i> Contact</a></li>
+                        <li><a href="contactus.html"> <i class="fa fa-envelope-o"></i> Contact</a></li>
                     </ul>
                 </div> <!-- navbar end -->
             </div>
