--- a/fullstack-c2/module2/conFusion/contactus.html
+++ b/fullstack-c2/module2/conFusion/contactus.html
@@ -138,8 +138,8 @@
                             <input type="text" class="form-control" id="lastname" name="lastname" placeholder="Enter Last Name">
                         </div>
                     </div>
-                    
-                    <div class="form-group">
+
+                    <div class="form-group"> <!-- Input group with addon for area code field '(', ')' -->
                         <label for="telnum" class="col-xs-12 col-sm-2 control-label">Contact Tel.</label>
                         <div class="col-xs-5 col-sm-4 col-md-3">
                             <div class="input-group">
@@ -157,7 +157,24 @@
                         <div class="col-sm-10">
                             <input type="email" class="form-control" id="emailid" name="emailid" placeholder="Email">
                         </div>
-                    </div>
+                    </div> <!-- End input group w/ addons -->
+
+                    <div class="form-group"> <!-- Checkbox, select -->
+                       <div class="checkbox col-sm-5 col-sm-offset-2">
+                            <label class="checkbox-inline">
+                                <input type="checkbox" name="approve" value="">
+                                <strong>May we contact you?</strong>
+                            </label>
+                        </div>
+                        <div class="col-sm-3 col-sm-offset-1">
+                            <select class="form-control">
+                                <option>Tel.</option>
+                                <option>Email</option>
+                            </select>
+                        </div>
+                    </div> <!-- End checkbox, select -->
+
+
                 </form>
             </div> <!-- End form div -->
              <div class="col-xs-12 col-sm-3">
