--- a/fullstack-c2/module2/conFusion/contactus.html
+++ b/fullstack-c2/module2/conFusion/contactus.html
@@ -174,6 +174,14 @@
                         </div>
                     </div> <!-- End checkbox, select -->
 
+                    <div class="form-group"> <!-- Textarea -->
+                        <label for="feedback" class="col-sm-2 control-label">Your Feedback</label>
+                        <div class="col-sm-10">
+                            <textarea class="form-control" id="feedback" name="feedback" rows="12"></textarea>
+                        </div>
+                    </div> <!-- End textarea -->
+
+
 
                 </form>
             </div> <!-- End form div -->
