--- a/fullstack-c2/module2/conFusion/contactus.html
+++ b/fullstack-c2/module2/conFusion/contactus.html
@@ -181,6 +181,12 @@
                         </div>
                     </div> <!-- End textarea -->
 
+                    <div class="form-group"> <!-- Submit button -->
+                        <div class="col-sm-offset-2 col-sm-10">
+                            <button type="submit" class="btn btn-primary">Send Feedback</button>
+                        </div>
+                    </div> <!-- End submit button -->
+
 
 
                 </form>
