--- a/fullstack-c2/module2/conFusion/index.html
+++ b/fullstack-c2/module2/conFusion/index.html
@@ -36,7 +36,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                <a class="navbar-brand" href="#"><img src="img/logo.png" height=30 width=41></a>
+                <a class="navbar-brand" href="index.html"><img src="img/logo.png" height=30 width=41></a>
                 </div>
 
                 
