--- a/fullstack-c2/module2/conFusion/index.html
+++ b/fullstack-c2/module2/conFusion/index.html
@@ -59,9 +59,23 @@
                             <li><a href="#">Lunch Buffet</a></li>
                             <li><a href="#">Weekend Brunch</a></li>
                         </ul>
-                     </li> <!-- End of menu dropdown for categories -->
-                        <li><a href="contactus.html"> <i class="fa fa-envelope-o"></i> Contact</a></li>
+                    </li> <!-- End of menu dropdown for categories -->
+                    <li><a href="contactus.html"> <i class="fa fa-envelope-o"></i> Contact</a></li>
                     </ul>
+
+                    <form class="navbar-form navbar-right" role="search"> <!-- Navbar sign in form -->
+                      <div class="form-group">
+                        <input type="text" class="form-control" name="email" placeholder="Email">
+                      </div>
+                      <div class="form-group">
+                          <input type="text" class="form-control" name="password" placeholder="Password"></input>
+                      </div>
+                      <div class="form-group">
+                          <input type="checkbox" name="remember-me" id="remember-me" value="1"><a style="color:floralwhite">Remember Me</a></input>
+                      </div>
+                      <button type="submit" class="btn btn-info">Sign In</button>
+                    </form> <!-- End navbar sign in form -->
+
                 </div> <!-- navbar end -->
             </div>
         </nav>  
