--- a/fullstack-c2/module2/conFusion/index.html
+++ b/fullstack-c2/module2/conFusion/index.html
@@ -96,6 +96,10 @@
                     <p style="padding:20px;"></p>
                     <img src="img/logo.png" class="img-responsive">
                 </div> <!-- End restaurant logo -->
+                <div class="col-xs-12 col-sm-2"> <!-- Reserve table button -->
+                    <p style="padding: 40px"></p>
+                    <a type="button" class="btn btn-warning btn-block" href="#reservetable">Reserve Table</a>
+                </div> <!-- End reserve table button -->
             </div>
         </div>
     </header>
