add reserve form - task3

--- a/fullstack-c2/module2/conFusion/index.html
+++ b/fullstack-c2/module2/conFusion/index.html
@@ -170,7 +170,74 @@
                 </div>
             </div>
         </div>
-    </div>
+        <!-- Reserve table form -->
+       <div class="row row-content">
+           <div class="col-xs-12 col-sm-3">
+              <h3>Reserve a Table</h3> 
+           </div>
+            <div class="col-xs-12 col-sm-9"> <!--Form div -->
+                <form id="reservetable" class="form-horizontal" role="form">
+
+                    <div class="form-group"> <!-- Checkbox -->
+                        <div class="col-xs-12 col-sm-2 control-label"> 
+                            <label>Number of Guests</label>
+                        </div>
+                        <div class="col-xs-12 col-sm-10">
+                            <label class="radio-inline">
+                                <input type="radio" name="guestsnumber">1
+                            </label>
+                            <label class="radio-inline">
+                                <input type="radio" name="guestsnumber">2
+                            </label>
+                            <label class="radio-inline">
+                                <input type="radio" name="guestsnumber">3
+                            </label>
+                            <label class="radio-inline">
+                                <input type="radio" name="guestsnumber">4
+                            </label>
+                            <label class="radio-inline">
+                                <input type="radio" name="guestsnumber">5
+                            </label>
+                            <label class="radio-inline">
+                                <input type="radio" name="guestsnumber">6
+                            </label>
+                        </div>
+                    </div> <!-- End checkbox -->
+
+                    <div class="form-group"> <!-- Date and Time -->
+                        <label for="date" class="col-xs-12 col-sm-2 control-label">Date and Time</label>
+                        <div class="col-xs-12 col-sm-3 has-feedback">
+                            <input id="date" type="text" class="form-control" placeholder="Date" onfocus="this.type='date'" onblur="this.type='text'">
+                            <span class="glyphicon glyphicon-calendar form-control-feedback" aria-hidden="true"></span>
+                        </div>
+                        <div class="col-xs-12 col-sm-3 has-feedback">
+                            <input id="time" type="text" class="form-control" placeholder="Time" onfocus="this.type='time'" onblur="this.type='text'">
+                            <span class="glyphicon glyphicon-time form-control-feedback" aria-hidden="true"></span>
+                        </div>
+                    </div> <!-- End date and time -->
+
+                    <div class="form-group"> <!-- Submit button -->
+                        <div class="col-sm-offset-2 col-sm-4">
+                            <button type="submit" class="btn btn-primary">Reserve</button>
+                        </div>
+                    </div> <!-- End submit button -->
+
+                    <div class="alert alert-warning alert-dismissible" role="alert">
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                        <strong>Warning:</strong> Please <a href="tel:+85212345678" class="alert-link">call</a> us to reserve for more than six guests.
+                    </div>
+
+                </form>
+            </div> <!-- End form div -->
+
+            <div class="col-xs-12 col-sm-3">
+                <p style="padding:20px;"></p>
+            </div>
+       </div>
+        <!-- End reserve table form -->
+
+
+    </div> <!-- main content container div -->
 
     <footer class="row-footer">
         <div class="container">
