--- a/fullstack-c2/module3/conFusion/aboutus.html
+++ b/fullstack-c2/module3/conFusion/aboutus.html
@@ -92,7 +92,7 @@
         </div>
         
         <div class="row row-content">
-            <div class="col-xs-12 col-sm-8">
+            <div class="col-xs-12 col-sm-6 col-lg-8">
                 <h2>Our History</h2>
                 <p>Started in 2010, Ristorante con Fusion quickly established itself as a culinary icon par excellence in Hong Kong. With its unique brand of world fusion cuisine that can be found nowhere else, it enjoys patronage from the A-list clientele in Hong Kong.  Featuring four of the best three-star Michelin chefs in the world, you never know what will arrive on your plate the next time you visit us.</p>
                 <p>The restaurant traces its humble beginnings to <em>The Frying Pan</em>, a successful chain started by our CEO, Mr. Peter Pan, that featured for the first time the world's best cuisines in a pan.</p>
@@ -110,7 +110,7 @@
 
             </div>
 
-            <div class="col-xs-12 col-sm-4"> <!-- Bootstrap panel -->
+            <div class="col-xs-12 col-sm-6 col-lg-4"> <!-- Bootstrap panel -->
 
                 <div class="panel panel-primary"> <!-- Panel -->
                     <div class="panel-heading">
@@ -137,7 +137,7 @@
 
 
         <div class="row row-content">
-            <div class="col-xs-12 col-sm-10">
+            <div class="col-xs-12">
                 <h2>Corporate Leadership</h2>
 
                 <ul class="nav nav-tabs" role="tablist">
@@ -179,14 +179,11 @@
                 </div><!-- End tab content div -->
             </div>
 
-            <div>
-                <p style="padding:20px;"></p>
-            </div>
        </div>
 
 
         <div class="row row-content">
-            <div class="col-xs-12 col-sm-9">
+            <div class="col-xs-12">
                 <h2>Facts &amp; Figures</h2>
 
                 <div class="table-responsive"> <!-- Table -->
@@ -224,9 +221,6 @@
                 </table>
                 </div> <!-- End table -->
 
-            </div>
-             <div class="col-xs-12 col-sm-3">
-                <p style="padding:20px;"></p>
             </div>
        </div> 
 
