--- a/fullstack-c2/module3/conFusion/index.html
+++ b/fullstack-c2/module3/conFusion/index.html
@@ -132,6 +132,14 @@
     </header>
 
     <div class="container">
+
+       <div class="row row-content">
+           <div class="col-xs-12">
+
+            </div>
+       </div>
+
+
         <div class="row row-content">
             <div class="col-xs-12 col-sm-3 col-sm-push-9">
                 <p style="padding:20px;"></p>
