--- a/fullstack-c2/module3/conFusion/index.html
+++ b/fullstack-c2/module3/conFusion/index.html
@@ -196,7 +196,7 @@
                 </div> <!-- End restaurant logo -->
                 <div class="col-xs-12 col-sm-2"> <!-- Reserve table button -->
                     <p style="padding: 40px"></p>
-                    <a type="button" class="btn btn-warning btn-block" href="#reserveform">Reserve Table</a>
+                    <a type="button" class="btn btn-warning btn-block" href="#reserveform" data-toggle="modal" data-target="#reserveModal">Reserve Table</a>
                 </div> <!-- End reserve table button -->
             </div>
         </div>
