add seating section button group in reserve form - task4

--- a/fullstack-c2/module3/conFusion/index.html
+++ b/fullstack-c2/module3/conFusion/index.html
@@ -145,6 +145,21 @@
                         </div>
                     </div> <!-- End checkbox -->
 
+                    <!-- Smoking radio button group -->
+                    <div class="form-group">
+                        <div class="col-xs-12 col-sm-2 control-label">
+                            <label>Section</label>
+                        </div>
+                        <div class="col-xs-12 col-sm-4 btn-group" data-toggle="buttons">
+                          <label class="btn btn-success btn-sm active">
+                            <input type="radio" name="section" id="nonsmoking" autocomplete="off" checked>Non-Smoking
+                          </label>
+                          <label class="btn btn-danger btn-sm">
+                            <input type="radio" name="section" id="smoking" autocomplete="off">Smoking
+                          </label>
+                        </div>
+                    </div>
+
                     <div class="form-group"> <!-- Date and Time -->
                         <label for="date" class="col-xs-12 col-sm-2 control-label">Date and Time</label>
                         <div class="col-xs-12 col-sm-4 has-feedback">
