add font-size style to keep login buttons in same line

--- a/fullstack-c2/module4/conFusion/index.html
+++ b/fullstack-c2/module4/conFusion/index.html
@@ -85,21 +85,24 @@
             </div>
             <div class="modal-body">
 
-                    <form class="form-inline" > <!-- Navbar sign in form -->
+                    <form class="form-inline"> <!-- Navbar sign in form -->
                       <div class="form-group">
-                        <label class="sr-only" for="email">Email address</label>
-                        <input type="email" id="email" class="form-control input-sm" name="email" placeholder="Email">
+                            <label class="sr-only" for="email">Email address</label>
+                            <input type="email" id="email" class="form-control input-sm" name="email" 
+                            placeholder="Email">
                       </div>
+
                       <div class="form-group">
                         <label class="sr-only" for="password">Password</label>
-                          <input type="password" id="password" class="form-control input-sm" name="password" placeholder="Password"></input>
+                          <input type="password" id="password" class="form-control input-sm" name="password" placeholder="Password">
                       </div>
                       <div class="checkbox">
                         <label>
-                            <input type="checkbox">Remember me
+                            <input id="rememberme" name="rememberme" type="checkbox"><t style="font-size:.9em">Remember me</t>
                         </label>
                       </div>
-                      <button type="submit" class="btn btn-info btn-sm">Sign In</button><button type="button" class="btn btn-default btn-sm"
+                      <button type="submit" class="btn btn-info btn-sm">Sign In</button>
+                      <button type="button" class="btn btn-default btn-sm"
                        data-dismiss="modal">Cancel</button>
                     </form> <!-- End navbar sign in form -->
 
