remove data-* attributes from reserve/login buttons -task1

--- a/fullstack-c2/module4/conFusion/index.html
+++ b/fullstack-c2/module4/conFusion/index.html
@@ -65,7 +65,7 @@
                     </ul>
 
                  <ul class="nav navbar-nav navbar-right">
-                    <li><a data-toggle="modal" data-target="#loginModal">
+                    <li><a>
                     <span class="glyphicon glyphicon-log-in"></span> Login</a>
                     </li>
                 </ul>
@@ -215,7 +215,7 @@
                 </div> <!-- End restaurant logo -->
                 <div class="col-xs-12 col-sm-2"> <!-- Reserve table button -->
                     <p style="padding: 40px"></p>
-                    <a type="button" class="btn btn-warning btn-block" href="#reserveform" data-toggle="modal" data-target="#reserveModal">Reserve Table</a>
+                    <a type="button" class="btn btn-warning btn-block" href="#reserveform">Reserve Table</a>
                 </div> <!-- End reserve table button -->
             </div>
         </div>
