--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Fullstack-solutions</h1>
-      <h2 class="project-tagline">solutions for fullstack course</h2>
+      <h1 class="project-name">Con Fusion</h1>
+      <h2 class="project-tagline">a project developed throughout the fullstack development<br> specialization from Hong Kong University available on Coursera.</h2>
       <a href="https://github.com/10XL/fullstack-solutions" class="btn">View on GitHub</a>
       <a href="https://github.com/10XL/fullstack-solutions/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/10XL/fullstack-solutions/tarball/master" class="btn">Download .tar.gz</a>
@@ -20,29 +20,56 @@
 
     <section class="main-content">
       <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a id="conFusion1-1" class="anchor" href="#confusion-course-2-module-1" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>conFusion - course 2 - module 1 <a class="btn-view" href="https://10xl.github.io/fullstack-solutions/fullstack-c2/module1/conFusion/" target="_blank">View</a></h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
-
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<p>In this assignment, you will continue to work with the website that you have been developing in the exercises. You will add the <code>aboutus</code> web page to the website. At the end of this module, you should have completed the following tasks:
+<ul>
+<li><code>Updated the navigation bar</code></li>
+<li><code>Added breadcrumbs to the web page</code></li>
+<li><code>Formatted the contents of the web page</code></li>
+</ul>
+</p>
 
 <h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<a id="conFusion1-2" class="anchor" href="#confusion-course-2-module-2" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>conFusion - course 2 - module 2 <a class="btn-view" href="https://10xl.github.io/fullstack-solutions/fullstack-c2/module2/conFusion/" target="_blank">View</a></h3>
 
-<p>You can <a href="https://help.github.com/articles/basic-writing-and-formatting-syntax/#mentioning-users-and-teams" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p>In this assignment, you will continue to work with the website that you have been developing in the exercises. You will edit the home page (index.html). You will start with the current home page at the end of the last exercise in this module. At the end of this assignment, you should have completed the following tasks:
+
+<ul>
+<li><code>Updated the navigation bar to include a form to allow the user to type in their login information to be able to log into the website. Note that you will only design the form. The form will be inactive at this stage.
+</code></li>
+<li><code>Added a button to the Jumbotron to enable users to reserve a table at the restaurant. Clicking on this button should take you to the reservation form at the bottom of the page.
+</code></li>
+<li><code>Designed a form to enable users to submit a reservation request for a table. Note that at this stage the form will be inactive. This form should have been included in a new content row that you create just before the footer of the page. The row should also have included a dismissible warning alert.
+</code></li>
+<li><code>Formatted the contents of the second row of the page using media class. The content column of the row should have been converted to a media object. In addition it should include a label.
+</code></li>
+</ul>
+</p>
 
 <h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
+<a id="conFusion1-3" class="anchor" href="#confusion-course-2-module-3" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>conFusion - course 2 - module 3 <a class="btn-view" href="https://10xl.github.io/fullstack-solutions/fullstack-c2/module3/conFusion/" target="_blank">View</a></h3>
 
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+<p>In this assignment, you will continue to work with the website that you have been developing in the exercises. You will edit the home page (index.html). You will start with the current home page at the end of the last exercise in this module. At the end of this assignment, you should have completed the following tasks:
+<ul>
+<li><code>Removed the tooltip from the Reserve Table button.</code></li>
+<li><code>Moved the table reservation form and the alert message from the last content row into a modal.</code></li>
+<li><code>Updated the Reserve Table button to show the modal containing the table reservation form when the button is clicked.</code></li>
+<li><code>Included a radio button group in the table reservation form to enable diners to ask for a table in the smoking/non-smoking section of the restaurant.</code></li>
+</ul>
+</p>
+
+<h3>
+<a id="conFusion1-4" class="anchor" href="#confusion-course-2-module-4" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>conFusion - course 2 - module 4 <a class="btn-view" href="https://10xl.github.io/fullstack-solutions/fullstack-c2/module4/conFusion/" target="_blank">View</a></h3>
+
+<p>In this assignment, you will continue to work with the website that you have been developing in the exercises. You will edit the home page (index.html). You will start with the current home page at the end of the last exercise in this module. At the end of this assignment, you should have completed the following tasks:
+<ul>
+<li><code>Removed the data-* attributes from the Reserve Table button and the Login link in the Navbar that control the two modals.</code></li>
+<li><code>Updated the button and the link so that they will trigger the appropriate JavaScript code when clicked.</code></li>
+<li><code>Included appropriate JavaScript code using the modal methods to toggle the showing and hiding of the modals when the two buttons are clicked.</code></li>
+</ul>
+</p>
+
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/10XL/fullstack-solutions">Fullstack-solutions</a> is maintained by <a href="https://github.com/10XL">10XL</a>.</span>
