--- a/fullstack-c3/module1/conFusion/app/dishdetail.html
+++ b/fullstack-c3/module1/conFusion/app/dishdetail.html
@@ -46,7 +46,7 @@
             <div class="col-xs-9 col-xs-offset-1">
               <label for="comments"><h4>Customer Comments</h4></label>
               <label style="padding-left: 25px; color: rgba(0,0,0,.5);" for="sort">Sort by:</label>
-              <input id="sort" type="text" ng-model="dishCtrl.dish.filtTxt">
+              <input id="sort" type="text" ng-model="dishCtrl.dish.filtTxt" placeholder="author, date, rating">
                <ul id="comments" class="media-list">
                 <li class="media" ng-repeat="comment in dishCtrl.dish.comments | orderBy:dishCtrl.dish.filtTxt">
                     <div class="media-body">
