--- a/fullstack-c3/module2/conFusion/app/dishdetail.html
+++ b/fullstack-c3/module2/conFusion/app/dishdetail.html
@@ -62,15 +62,54 @@
               </ul>
             </div>
             <div class="col-xs-9 col-xs-offset-1" ng-controller="DishCommentController">
-                    <ul class="list-unstyled">
-						<p>Task 3: Here you include the code to show the live preview of the comment</p>
-						<p>The comment should be shown only when the form contains valid
-						information and is not pristine</p>
-                    </ul>
-                <form class="form-horizontal" name="commentForm"
-                		ng-submit="submitComment()" novalidate>
-					<p>Task 1: Design the form to submit the comments</p>
-					<p>Task 2: You need to validate that the user name and comments are entered</p>
+                <ul class="list-unstyled">
+						        <p>Task 3: Here you include the code to show the live preview of the comment</p>
+						        <p>The comment should be shown only when the form contains validinformation and is not pristine</p>
+                    {{comment.name}}
+                    {{comment.numberOfStars}}
+                    {{comment.commentText}}
+                </ul>
+            <form class="form-horizontal" name="commentForm" ng-submit="submitComment()" novalidate>
+                <div class="form-group">
+                    <label for="name" class="col-sm-2 control-label">First Name</label>
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control" id="name" name="name" placeholder="Enter Your Name"
+                        ng-model="comment.name" required>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-xs-12 col-sm-2 control-label"> 
+                        <label>Number of Stars</label>
+                    </div>
+                    <div class="col-xs-12 col-sm-10">
+                        <label class="radio-inline">
+                            <input type="radio" name="rating" ng-model="comment.numberOfStars" value="1">1
+                        </label>
+                        <label class="radio-inline">
+                            <input type="radio" name="rating" ng-model="comment.numberOfStars" value="2">2
+                        </label>
+                        <label class="radio-inline">
+                            <input type="radio" name="rating" ng-model="comment.numberOfStars" value="3">3
+                        </label>
+                        <label class="radio-inline">
+                            <input type="radio" name="rating" ng-model="comment.numberOfStars" value="4">4
+                        </label>
+                        <label class="radio-inline">
+                            <input type="radio" name="rating" ng-model="comment.numberOfStars" value="5">5
+                        </label>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label for="feedback" class="col-sm-2 control-label">Your Comments</label>
+                    <div class="col-sm-10">
+                        <textarea class="form-control" rows="12" ng-model="comment.commentText" name="comments">
+                        </textarea>
+                    </div>
+                </div> 
+
+                <p>Task 1: Design the form to submit the comments</p>
+                <p>Task 2: You need to validate that the user name and comments are entered</p>
                 </form>
             </div>
         </div>
