--- a/fullstack-c3/module2/conFusion/app/dishdetail.html
+++ b/fullstack-c3/module2/conFusion/app/dishdetail.html
@@ -99,14 +99,18 @@
                         </label>
                     </div>
                 </div>
-
                 <div class="form-group">
                     <label for="feedback" class="col-sm-2 control-label">Your Comments</label>
                     <div class="col-sm-10">
                         <textarea class="form-control" rows="12" ng-model="comment.commentText" name="comments">
                         </textarea>
                     </div>
-                </div> 
+                </div>
+                <div class="form-group">
+                        <div class="col-sm-offset-2 col-sm-10">
+                            <button type="submit" class="btn btn-primary" >Send Feedback</button>
+                        </div>
+                    </div>
 
                 <p>Task 1: Design the form to submit the comments</p>
                 <p>Task 2: You need to validate that the user name and comments are entered</p>
