--- a/fullstack-c3/module2/conFusion/app/dishdetail.html
+++ b/fullstack-c3/module2/conFusion/app/dishdetail.html
@@ -63,11 +63,12 @@
             </div>
             <div class="col-xs-9 col-xs-offset-1" ng-controller="DishCommentController">
                 <ul class="list-unstyled">
-                    <blockquote ng-show="commentForm.$valid && !commentForm.$pristine">
+                
+                    <li><blockquote ng-show="commentForm.$valid && !commentForm.$pristine">
                       <p>{{newComment.rating}} Stars</p>
                       <p>{{newComment.comment}}</p>
                       <footer>{{newComment.author}}, {{newComment.date | date}}</footer>
-                    </blockquote>
+                    </blockquote></li>
                 </ul>
             <form class="form-horizontal" name="commentForm" ng-submit="submitComment()" novalidate>
                 <div class="form-group" ng-class="{ 'has-error' : commentForm.author.$error.required && !commentForm.author.$pristine }">
